# EngineGoneRogue

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build-engine.sh  clang-tidy.sh  clang.txt  marketResearch.txt  researchECS.txt  todo.txt
Ahmni/: Makefile  Tutorial  main.cpp  readme.md  understand_game_engine.txt
assets/: start_screen_background.aseprite
assets/editor/: editor_textures.xml
assets/maps/: generateRoom.py  room1.csv  tiny_dungeon1.txt  tiny_dungeon_tilemap.csv
assets/projects/: test_project.xml
assets/projects/test_project/: animations.xml  endless.txt  objects.xml  player.xml  room_order.txt  start_room.txt  textures.xml
assets/textures/: big_buttons.aseprite  bullet_explosion.aseprite
assets/textures/BulletHell/: READ.txt
assets/textures/GUI/: big_buttons.aseprite  icon_buttons.aseprite
assets/textures/spritesheets/: bullet_explosion2.aseprite  kamikaze.aseprite
elen/: .gitignore  CMakeLists.txt  Makefile  basic_events.cpp  game_engine_research.txt  readme.md
elen/include/: SDL2
elen/lib/: SDL2_ttf
elen/other srcs/: alpha_blending.cpp  animated_sprites_and_vsync.cpp  basic_events.cpp  calculating_frame_rate.cpp  hardware_texture_rendering.cpp  mouse_events.cpp  per-pixel_collision_detection.cpp
elen/src/: hardware_texture_rendering.cpp  main.cpp
elen/srcc/: main.cpp
elen/srcc/Animation/: Animation.h
elen/srcc/Character/: Character.h  Warrior.cpp  Warrior.h
elen/srcc/Core/: Engine.cpp  Engine.h
elen/srcc/Events/: Event.h  EventHandler.cpp  EventHandler.h  EventListener.h  EventManager.cpp
elen/srcc/Graphics/: TextureManager.h
elen/srcc/Physics/: Transform.h
include/: SDL2_ttf
include/SDL2_mixer/: SDL_mixer.h
james/: Makefile
james/include/: SDL2_image
james/src/: t1.cpp  t5.cpp
lib/SDL2/: libSDL2-2.0.0.dylib
minwoo/: first_window.cpp  game_engine_summary.txt  makefile
minwoo/alpha_blending/: 13_alpha_blending.cpp  prog
minwoo/animated_sprites/: makefile  prog
minwoo/clip_rendering/: prog
minwoo/collision/: 27_collision_detection.cpp  makefile  prog
minwoo/color_keying/: 10_color_keying.cpp  makefile  prog
minwoo/color_modulation/: 12_color_modulation.cpp  makefile  prog
minwoo/events/: 03_event_driven_programming.cpp  makefile  prog
minwoo/file_rw/: makefile  prog
minwoo/first_window/: makefile
minwoo/frame_rate/: 24_calculating_frame_rate.cpp  makefile  prog
minwoo/geometry_rendering/: 08_geometry_rendering.cpp  prog
minwoo/image_ext_lib/: makefile  prog
minwoo/include/: SDL_image.h
minwoo/key_presses/: makefile  prog  readme.txt
minwoo/lib/: libSDL2_image-2.0.0.dylib
minwoo/motion/: makefile  prog
minwoo/mouse_events/: makefile  prog
minwoo/opt_surface_loading/: makefile  prog
minwoo/particle_engine/: makefile  prog
minwoo/pixel_collision/: prog
minwoo/prototype/: LTexture.cpp  Player.cpp  Player.h  TextureHandler.cpp  TextureHandler.h  main.cpp  makefile
minwoo/rendering/: makefile
minwoo/rotation_and_flipping/: 15_rotation_and_flipping.cpp  prog
minwoo/scrolling/: makefile  prog
minwoo/scrolling_background/: 31_scrolling_backgrounds.cpp  makefile  prog
minwoo/sound_music/: 21_sound_effects_and_music.cpp  makefile  prog
minwoo/text_input/: prog
minwoo/tiling/: 39_tiling.cpp  prog
minwoo/timing/: prog
minwoo/viewport/: 09_the_viewport.cpp  makefile  prog
personal_work/Ahmni/: Makefile  compile_commands.json
personal_work/elen/: .gitignore  readme.md
personal_work/james/: .gitignore  Makefile
personal_work/minwoo/: main.cpp  readme.txt
src/: globals.h  main.cpp  utils.h
src/Apps/: Application.cpp  Application.h  Editor.cpp  Editor.h  Game.cpp  Game.h
src/Character/: Character.h
src/Components/: Animation.cpp  Animation.h  Component.h  DrawData.h  Player.h  Transform.h
src/Core/: Engine.cpp  Engine.h  InputChecker.cpp  InputChecker.h  Layer.cpp  Layer.h
src/Editor/: Editor.cpp  Editor.h
src/Engine/: Engine.cpp  Engine.h  InputChecker.cpp  InputChecker.h
src/Engine/Map/: Room.h  (+2 more)
src/Events/: Event.h
src/Graphics/: Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
src/Layers/: Layer.h
src/Object/: GameObject.h
src/Objects/: Character.h  GameObject.h  IObject.h  Map.cpp  Map.h  Tile.cpp  Tile.h  Warrior.cpp  Warrior.h
src/Physics/: RigidBody.h
(+343 files in other folders)
